[package]
name = "connector"
version = "0.0.0"
edition = "2021"

[lib]
name = "connector"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
influxdb = { version = "0.4", features = ["derive"] }

[dev-dependencies]
mockito = "0.31"
