[package]
name = "data_sink"
version = "0.0.0"
edition = "2021"

[lib]
name = "data_sink"
path = "src/lib.rs"

[dependencies]
connector = { path = "../connector" }
influxdb = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"